Fix minor issues

--- a/paper/code/example.tex
+++ b/paper/code/example.tex
@@ -1147,159 +1147,159 @@ _ = ^ π (` (S Z) · N-⋆)
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
-	\>[0]\AgdaFunction{Ω⇝⋆}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaFunction{Ω}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{⋆}\<%
-	\\
-	\>[0]\AgdaFunction{Ω⇝⋆}\AgdaSpace{}%
-	\AgdaSymbol{=}\<%
-	\\
-	\>[0][@{}l@{\AgdaIndent{0}}]%
-	\>[4]\AgdaFunction{Ω}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-	\AgdaInductiveConstructor{sym-abs}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-	\\
-	%
-	\>[4]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{sym}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-	\AgdaInductiveConstructor{β-ƛ}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-	\\
-	%
-	\>[4]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{sym}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-	\AgdaInductiveConstructor{sym-abs}\AgdaSymbol{)))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-	\\
-	%
-	\>[4]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-	\AgdaInductiveConstructor{β-ƛ}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-	\\
-	%
-	\>[4]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
-	\AgdaInductiveConstructor{abs}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-	\\
-	%
-	\>[4]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{⋆}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{β-ƛ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-	\\
-	%
-	\>[4]\AgdaInductiveConstructor{⋆}\<%
-	\\
-	\>[0][@{}l@{\AgdaIndent{0}}]%
-	\>[2]\AgdaOperator{\AgdaInductiveConstructor{∎}}\<%
-	\\
-	%
-	\\[\AgdaEmptyExtraSkip]%
-	\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaFunction{eval}\AgdaSpace{}%
-	\AgdaFunction{Ω}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{≋}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{steps}\AgdaSpace{}%
-	\AgdaFunction{Ω⇝⋆}\AgdaSpace{}%
-	\AgdaInductiveConstructor{V-⋆}\<%
-	\\
-	\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{refl}\<%
+\>[0]\AgdaFunction{Ω⇝⋆}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Ω}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}\<%
+\\
+\>[0]\AgdaFunction{Ω⇝⋆}%
+\>[745I]\AgdaSymbol{=}\<%
+\\
+\>[.][@{}l@{}]\<[745I]%
+\>[5]\AgdaFunction{Ω}\<%
+\\
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
+\AgdaInductiveConstructor{sym-abs}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+%
+\>[5]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{sym}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
+\\
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
+\AgdaInductiveConstructor{β-ƛ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+%
+\>[5]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{sym}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
+\\
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
+\AgdaInductiveConstructor{sym-abs}\AgdaSymbol{)))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+%
+\>[5]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
+\\
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
+\AgdaInductiveConstructor{β-ƛ}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+%
+\>[5]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{))}\<%
+\\
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
+\AgdaInductiveConstructor{abs}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+%
+\>[5]\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}\<%
+\\
+\>[5][@{}l@{\AgdaIndent{0}}]%
+\>[7]\AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{β-ƛ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+%
+\>[5]\AgdaInductiveConstructor{⋆}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaOperator{\AgdaInductiveConstructor{∎}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{eval}\AgdaSpace{}%
+\AgdaFunction{Ω}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≋}}\AgdaSpace{}%
+\AgdaInductiveConstructor{steps}\AgdaSpace{}%
+\AgdaFunction{Ω⇝⋆}\AgdaSpace{}%
+\AgdaInductiveConstructor{V-⋆}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
 \end{code}
 %</eval>
