--- a/paper/code/progress.tex
+++ b/paper/code/progress.tex
@@ -1,4 +1,4 @@
-%<*progress>
+%<*progress-type>
 \begin{code}%
 	\>[0]\AgdaKeyword{data}\AgdaSpace{}%
 	\AgdaDatatype{Progress}\AgdaSpace{}%
@@ -80,9 +80,10 @@
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaDatatype{Progress}\AgdaSpace{}%
 	\AgdaBound{M}\<%
-	\\
-	%
-	\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</progress-type>
+%<*progress>
+\begin{code}
 	\>[0]\AgdaFunction{progress}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
