--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -527,11 +527,7 @@
 	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
 	\AgdaBound{t}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{t'}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊎}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
+	\AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
 	\AgdaBound{t'}\<%
 	\\
 	%
