--- a/paper/code/example.tex
+++ b/paper/code/example.tex
@@ -999,6 +999,7 @@ _ = ^ π (` (S Z) · N-⋆)
 	\AgdaSymbol{=}\<%
 	\\
 	\>[0][@{}l@{\AgdaIndent{0}}]%
+	\AgdaIndent{0}\AgdaSpace{}\AgdaSpace{}
 	\>[4]\AgdaFunction{N}\<%
 	\\
 	\>[4][@{}l@{\AgdaIndent{0}}]%
