Fix progress text

--- a/paper/code/progress.tex
+++ b/paper/code/progress.tex
@@ -82,7 +82,7 @@
 	\AgdaBound{M}\<%
 \end{code}
 %</progress-type>
-%<*progress>
+%<*progress-base>
 \begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -102,7 +102,7 @@
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\>[1]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\textasciicircum{}}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
@@ -110,12 +110,13 @@
 \\
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaInductiveConstructor{⋆}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\>[1]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaInductiveConstructor{N-⋆}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</progress-base>
+%<*progress-iso>
+\begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 \AgdaBound{iso}\AgdaSpace{}%
@@ -634,9 +635,10 @@
 \AgdaBound{iso}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
 \AgdaBound{NN}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</progress-iso>
+%<*progress-lam>
+\begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
 \AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
@@ -666,12 +668,13 @@
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaBound{NN}%
-\>[19]\AgdaSymbol{=}\AgdaSpace{}%
+\>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
 \AgdaInductiveConstructor{N-ƛ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</progress-lam>
+%<*progress-app>
+\begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
@@ -711,7 +714,7 @@
 \AgdaBound{M}\<%
 \\
 \>[0]\AgdaSymbol{...}%
-\>[7]\AgdaSymbol{|}\AgdaSpace{}%
+\AgdaIndent{0}\AgdaIndent{0}\>[7]\AgdaSymbol{|}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
 \AgdaBound{M⇄M'}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
@@ -776,9 +779,10 @@
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaInductiveConstructor{β-ƛ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</progress-app>
+%<*progress-prod>
+\begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -845,9 +849,10 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{NN}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</progress-prod>
+%<*progress-proj>
+\begin{code}
 \>[0]\AgdaFunction{progress}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{π}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
@@ -919,9 +924,8 @@
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
 \AgdaInductiveConstructor{β-π₂}\<%
-\\
 \end{code}
-%</progress>
+%</progress-proj>
 
 %<*value>
 \begin{code}
