--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -18,8 +18,19 @@
 \setlength{\headheight}{13.07225pt}
 
 %opening
-\title{Formalización de Sistema I con tipo Top}
-\author{Agustin Settimo}
+\title{
+	\includegraphics[width=5cm]{logo.png} \\
+	\huge Facultad de Ciencias Exactas,\\ Ingeniería y Agrimensura \\
+	\vspace{0.5cm}
+	\Large Departamento de Ciencias de la Computación \\
+	\vspace{1cm}
+	\Huge \textbf{Formalización de Sistema I con tipo Top}
+}
+\author{
+	\textbf{Autor} \\ Agustin Settimo \and
+	\textbf{Directora} \\ Cecilia Manzino \and
+	\textbf{Co-Director} \\ Cristian Sottile}
+\date{Octubre 2023}
 
 \begin{document}
 	
@@ -27,7 +38,7 @@
 	\tableofcontents
 	
 	\begin{abstract}
-		
+	\input{abstract}
 	\end{abstract}
 	
 	\chapter{Introducción}
